--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,6 +4,14 @@ repos:
     rev: master
     hooks:
       - id: black
+  - repo: https://github.com/asottile/seed-isort-config
+    rev: v1.1.0
+    hooks:
+      - id: seed-isort-config
+  - repo: https://github.com/pre-commit/mirrors-isort
+    rev: v4.3.4
+    hooks:
+      - id: isort
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: master
     hooks:
