--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,4 +15,7 @@ repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: master
     hooks:
+      - id: end-of-file-fixer
+      - id: trailing-whitespace
+      - id: check-ast
       - id: flake8
