--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,12 @@
 exclude: ^flipper_thrift|flipper_client\.egg_info|build$
 repos:
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v0.620
+    hooks:
+        - id: mypy
+          args:
+            - --follow-imports=silent
+            - --ignore-missing-imports
   - repo: https://github.com/ambv/black
     rev: master
     hooks:
