--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,9 +1,9 @@
-exclude: ^flipper_thrift|flipper_client\.egg_info|build$
 repos:
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v0.620
     hooks:
         - id: mypy
+          exclude: flipper_thrift|flipper_client\.egg_info|build|.circleci
           args:
             - --follow-imports=silent
             - --ignore-missing-imports
@@ -11,18 +11,30 @@ repos:
     rev: master
     hooks:
       - id: black
+        exclude: flipper_thrift|flipper_client\.egg_info|build|.circleci
   - repo: https://github.com/asottile/seed-isort-config
     rev: v1.1.0
     hooks:
       - id: seed-isort-config
+        exclude: flipper_thrift|flipper_client\.egg_info|build|.circleci
   - repo: https://github.com/pre-commit/mirrors-isort
     rev: v4.3.4
     hooks:
       - id: isort
+        exclude: flipper_thrift|flipper_client\.egg_info|build|.circleci
+  - repo: https://github.com/Lucas-C/pre-commit-hooks
+    rev: master
+    hooks:
+      - id: insert-license
+        files: flipper|flipper_thrift
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: master
     hooks:
       - id: end-of-file-fixer
+        exclude: flipper_thrift|flipper_client\.egg_info|build|.circleci
       - id: trailing-whitespace
+        exclude: flipper_thrift|flipper_client\.egg_info|build|.circleci
       - id: check-ast
+        exclude: flipper_thrift|flipper_client\.egg_info|build|.circleci
       - id: flake8
+        exclude: flipper_thrift|flipper_client\.egg_info|build|.circleci
