--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ jobs:
       - checkout
       - run: pipenv install --skip-lock -e .[dev]
       - run: pipenv run pytest tests
+      - run: make hooks
 workflows:
   version: 2
   build_and_test:
