--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,15 +1,41 @@
 version: 2
 jobs:
-  test:
+  build:
     docker:
-      - image: circleci/python:3
+      - image: circleci/python:3.6
+
+    working_directory: ~/repo
+
     steps:
       - checkout
-      - run: pipenv install --skip-lock -e .[dev]
-      - run: pipenv run pytest tests
-      - run: make hooks
-workflows:
-  version: 2
-  build_and_test:
-    jobs:
-      - test
+
+      - restore_cache:
+          keys:
+          - v1-dependencies-{{ checksum "setup.py" }}
+          - v1-dependencies-
+
+      - run:
+          name: install dependencies
+          command: |
+            python3 -m venv venv
+            . venv/bin/activate
+            make install-dev
+      - save_cache:
+          paths:
+            - ./venv
+
+          key: v1-dependencies-{{ checksum "setup.py" }}
+
+      - run:
+          name: run tests
+          command: |
+            . venv/bin/activate
+            pytest tests
+      - run:
+          name: run hooks
+          command: |
+            . venv/bin/activate
+            make hooks
+      - store_artifacts:
+          path: test-reports
+          destination: test-reports
