--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.620
+    rev: v0.942
     hooks:
         - id: mypy
           exclude: flipper_thrift|flipper_client\.egg_info|build|.circleci
@@ -8,32 +8,32 @@ repos:
             - --follow-imports=silent
             - --ignore-missing-imports
   - repo: https://github.com/ambv/black
-    rev: 18.6b4
+    rev: 22.3.0
     hooks:
       - id: black
-        exclude: flipper_thrift|flipper_client\.egg_info|build|.circleci
+        exclude: flipper_thrift|flipper_client.egg_info|build|.circleci
   - repo: https://github.com/asottile/seed-isort-config
-    rev: v1.1.0
+    rev: v2.2.0
     hooks:
       - id: seed-isort-config
         exclude: flipper_thrift|flipper_client\.egg_info|build|.circleci
   - repo: https://github.com/pre-commit/mirrors-isort
-    rev: v4.3.4
+    rev: v5.10.1
     hooks:
       - id: isort
         exclude: flipper_thrift|flipper_client\.egg_info|build|.circleci
   - repo: https://github.com/Lucas-C/pre-commit-hooks
-    rev: master
+    rev: v1.1.13
     hooks:
       - id: insert-license
         files: flipper|flipper_thrift
   - repo: https://gitlab.com/pycqa/flake8
-    rev: 3.7.7
+    rev: 3.9.2
     hooks:
       - id: flake8
         exclude: flipper_thrift|flipper_client\.egg_info|build|.circleci
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: master
+    rev: v4.1.0
     hooks:
       - id: end-of-file-fixer
         exclude: flipper_thrift|flipper_client\.egg_info|build|.circleci
@@ -42,7 +42,7 @@ repos:
       - id: check-ast
         exclude: flipper_thrift|flipper_client\.egg_info|build|.circleci
   - repo: https://github.com/PyCQA/bandit
-    rev: master
+    rev: 1.7.4
     hooks:
       - id: bandit
         files: ^flipper$
