--- a/.isort.cfg
+++ b/.isort.cfg
@@ -4,4 +4,4 @@ include_trailing_comma=True
 force_grid_wrap=0
 combine_as_imports=True
 line_length=88
-known_third_party = boto3,cachetools,fakeredis,moto,pyee,pytest,redis,setuptools,thrift
+known_third_party = boto3,cachetools,fakeredis,moto,psycopg,pyee,pytest,redis,setuptools,testing,thrift
